<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/home_background"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/wallpaper7"
        android:contentDescription="@string/designation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="45dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/equipment_types"
        android:textColor="#6270BF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/num_of_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/_6_items"
        android:textColor="#6270BF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_title" />

    <ImageView
        android:id="@+id/logo_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="-40dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="162dp"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/DiagnosticButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#E8C7E1F4"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/icon_1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="110dp"
                android:fontFamily="sans-serif"
                android:text="@string/diagnostic_equipment"
                android:textColor="#6270BF"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/diagnostic_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/diagnostic_icon"
                android:contentDescription="@string/diagnostic_icon" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/TreatmentButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/icon_2_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="110dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/treatment_equipment"
                    android:textColor="#6270BF"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/treatment_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="false"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/treatment_icon"
                    android:contentDescription="@string/treatment_icon" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:id='@+id/LifeSupportButton'
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/icon_3_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="110dp"
                android:fontFamily="sans-serif"
                android:text="@string/life_support_equipment"
                android:textAlignment="center"
                android:textColor="#6270BF"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/life_support_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/life_support_icon"
                android:contentDescription="@string/life_support_icon" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/MonitorButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E8C7E1F4">

                <TextView
                    android:id="@+id/icon_4_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="110dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/medical_monitor"
                    android:textColor="#6270BF"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/monitor_icon"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentEnd="false"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/monitor_icon"
                    app:srcCompat="@drawable/monitor_icon" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.cardview.widget.CardView
            android:id="@+id/MedLabButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#E8C7E1F4"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/icon_5_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="110dp"
                android:fontFamily="sans-serif"
                android:text="@string/medical_laboratory"
                android:textColor="#6270BF"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/laboratory_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/laboratory_icon"
                android:contentDescription="@string/lab_icon" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/TherapeuticButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/icon_6_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="110dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/therapeutic_equipment"
                    android:textColor="#6270BF"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/therapeutic_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@drawable/therapeutic_icon"
                    android:contentDescription="@string/therapeutic_icon" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>